<resources>
    <string name="app_name">Dick\'s Goods</string>
    <string name="title_activity_dick_details">DickDetailsActivity</string>
    <string name="tech_issue">Due to some technical issues unable to connect server.</string>
    <string name="no_internet_connection_available">No Internet Connection Available.</string>
    <string name="action_settings">Settings</string>
    <string name="dtls_key_name">Name</string>
    <string name="dtls_key_verified">Verified</string>
    <string name="dtls_key_url">Url</string>
    <string name="dtls_key_rating">Rating</string>
    <string name="dtls_key_address">Address</string>
    <string name="dtls_key_contact">Contact us at</string>
    <string name="dtls_key_photos">Photos</string>
</resources>
