<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dicks.goods.ui.DickDetailsActivity"
    tools:showIn="@layout/activity_dick_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:showIn="@layout/content_dick_details">

            <TextView
                android:id="@+id/key_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dtls_key_name" />

            <TextView
                android:id="@+id/value_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:showIn="@layout/content_dick_details">

            <TextView
                android:id="@+id/key_verified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dtls_key_verified" />

            <TextView
                android:id="@+id/value_verified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:showIn="@layout/content_dick_details">

            <TextView
                android:id="@+id/key_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dtls_key_url" />

            <TextView
                android:id="@+id/value_url"
                android:linksClickable="true"
                android:autoLink="web|email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:showIn="@layout/content_dick_details">

            <TextView
                android:id="@+id/key_ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dtls_key_rating" />

            <TextView
                android:id="@+id/value_ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:showIn="@layout/content_dick_details">

            <TextView
                android:id="@+id/key_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dtls_key_address" />

            <TextView
                android:id="@+id/value_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:showIn="@layout/content_dick_details">

            <TextView
                android:id="@+id/key_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dtls_key_contact" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/contact_phone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />

                <ImageView
                    android:id="@+id/contact_twitter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/twitter_icon" />

                <ImageView
                    android:id="@+id/contact_facebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/fb_icon" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:showIn="@layout/content_dick_details">

            <TextView
                android:id="@+id/key_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dtls_key_photos" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/photos_scroll_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
